deleted unused resources